// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatsTestCases should print correct stats for normal-errors 1`] = `
{
  "assets": [
    {
      "chunks": [
        "main",
      ],
      "name": "bundle.js",
      "size": 1672,
      "type": "asset",
    },
  ],
  "chunks": [
    {
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "names": [
        "main",
      ],
      "size": 20,
      "type": "chunk",
    },
  ],
  "errors": [
    {
      "formatted": "error[internal]: Resolve error
  ┌─ tests/statsCases/normal-errors/index.js:1:1
  │
1 │ import "not-exist";
  │ ^^^^^^^^^^^^^^^^^^^ Failed to resolve not-exist

",
      "message": "Failed to resolve not-exist",
    },
  ],
  "errorsCount": 1,
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "./index.js",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/normal-errors/index.js",
      "moduleType": "js",
      "name": "./index.js",
      "size": 20,
      "type": "module",
    },
  ],
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for normal-errors 2`] = `
"    Asset      Size  Chunks  
bundle.js  1.63 KiB    main  
chunk {main} bundle.js (main) 20 bytes [entry]
[./index.js] 20 bytes {main}

ERROR in error[internal]: Resolve error
  ┌─ tests/statsCases/normal-errors/index.js:1:1
  │
1 │ import "not-exist";
  │ ^^^^^^^^^^^^^^^^^^^ Failed to resolve not-exist

"
`;

exports[`StatsTestCases should print correct stats for simple 1`] = `
{
  "assets": [
    {
      "chunks": [
        "main",
      ],
      "name": "bundle.js",
      "size": 1735,
      "type": "asset",
    },
  ],
  "chunks": [
    {
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "names": [
        "main",
      ],
      "size": 26,
      "type": "chunk",
    },
  ],
  "errors": [],
  "errorsCount": 0,
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "./index.js",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/simple/index.js",
      "moduleType": "js",
      "name": "./index.js",
      "size": 26,
      "type": "module",
    },
  ],
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for simple 2`] = `
"    Asset      Size  Chunks  
bundle.js  1.69 KiB    main  
chunk {main} bundle.js (main) 26 bytes [entry]
[./index.js] 26 bytes {main}"
`;
